@@ -39,7 +39,7 @@ supports all attributes of <code>&lt;fileset&gt;</code>
   <tr>
     <td valign="top">basedir</td>
     <td valign="top">the directory to start archiving files from.</td>
-    <td valign="top" align="center">Yes</td>
+    <td valign="top" align="center">No</td>
   </tr>
   <tr>
     <td valign="top">verbose</td>
@@ -91,6 +91,13 @@ supports all attributes of <code>&lt;fileset&gt;</code>
     <td valign="top" align="center">No</td>
   </tr>
 </table>
+<h3>Parameters specified as nested elements</h3>
+<h4>fileset</h4>
+
+<p>The cab task supports any number of nested <a
+href="../CoreTypes/fileset.html"><code>&lt;fileset&gt;</code></a>
+elements to specify the files to be included in the archive.</p>
+
 <h3>Examples</h3>
 <blockquote><pre>
 &lt;cab cabfile=&quot;${dist}/manual.cab&quot;
@@ -121,8 +128,21 @@ manual.cab in the ${dist} directory. Only html files under the
 directory api are archived, and files with the name todo.html are
 excluded. Output from the cabarc tool is displayed in the build
 output.</p>
+
+<blockquote><pre>
+&lt;cab cabfile=&quot;${dist}/manual.cab&quot;
+     verbose=&quot;yes&quot;&gt;
+  &lt;fileset
+       dir=&quot;htdocs/manual&quot;
+       includes=&quot;api/**/*.html&quot;
+       excludes=&quot;**/todo.html&quot;
+  /&gt;
+&lt;/cab&gt;
+</pre></blockquote>
+<p>is equivalent to the example above.</p>
+
 <hr>
-<p align="center">Copyright &copy; 2000-2002 Apache Software Foundation. All rights
+<p align="center">Copyright &copy; 2000-2003 Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
